--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@ permalink: /posts/:title.html
 exclude:
   - README.md
 
-name: Your Name's Site
-host: localhost
-desc: Some description of your site.
+name: jaylocke
+host: jaylocke.github.io/blog/
+desc:
 
 custom:
     category:
@@ -22,11 +22,11 @@ custom:
 
 meta:
     author:
-        name: Your Name
-        email: your-email@example.com
-        disqus: your-disqus-short-name              # Disqus缩略标识
+        name: 陈文杰
+        email: jaylocke@126.com
+        disqus: 游离在前端与设计中的一条虫，期待着自己变成一条龙.              # Disqus缩略标识
         gcse: 000346898720731947188:13h55x32l0y     # Google自定义搜索标识ID
-        github: your-github-account                 # GitHub账号
+        github: jaylocke.github.io                # GitHub账号
         gravatar: 1cd8c12591616d8c22aaa624f8c07834  # Gravatar头像标识
 
     disqus: disqus.com/embed.js                     # Disqus评论的JS地址
